--- a/index.html
+++ b/index.html
@@ -1,77 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aquana is ....">
-    <meta name="keywords" content="customisable water experience , water">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aquana is ...." />
+    <meta name="keywords" content="customisable water experience , water" />
     <title>Aquana</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  </head>
+
+  <body>
     <nav class="nav flex justify-between items-center px-8 lg:px-24 py-2">
-        <div class="logo flex items-center">
-            <img class="w-14" src="logo/pngegg-logo.png" alt="Aquana-logo">
-            <span class="logo-name text-blue-700 ">Aquana</span>
+      <div class="logo flex items-center">
+        <img class="w-14" src="logo/pngegg-logo.png" alt="Aquana-logo" />
+        <span class="logo-name text-blue-700">Aquana</span>
+      </div>
+      <div class="nav-links hidden lg:block">
+        <ul class="flex w-96 justify-between items-center">
+          <li class="hover:underline"><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li
+            class="bg-orange-500 text-white py-1 px-4 rounded-md font-semibold"
+          >
+            <a href="#">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+      <div class="hamburger-menu lg:hidden">
+        <?xml version="1.0" ?><svg
+          height="18px"
+          version="1.1"
+          viewBox="0 0 25 25"
+          width="18px"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+        >
+          <title />
+          <desc />
+          <defs />
+          <g
+            fill="none"
+            fill-rule="evenodd"
+            id="TabBar-Icons"
+            stroke="none"
+            stroke-width="1"
+          >
+            <g fill="#000000" id="Hamburger-Round">
+              <path
+                d="M0,4 C0,2.8954305 0.889763236,2 2.00359486,2 L22.9964051,2 C24.10296,2 25,2.88772964 25,4 C25,5.1045695 24.1102368,6 22.9964051,6 L2.00359486,6 C0.897039974,6 0,5.11227036 0,4 L0,4 Z M0,12 C0,10.8954305 0.889763236,10 2.00359486,10 L22.9964051,10 C24.10296,10 25,10.8877296 25,12 C25,13.1045695 24.1102368,14 22.9964051,14 L2.00359486,14 C0.897039974,14 0,13.1122704 0,12 L0,12 Z M0,20 C0,18.8954305 0.889763236,18 2.00359486,18 L22.9964051,18 C24.10296,18 25,18.8877296 25,20 C25,21.1045695 24.1102368,22 22.9964051,22 L2.00359486,22 C0.897039974,22 0,21.1122704 0,20 L0,20 Z"
+                id="Hamburger"
+              />
+            </g>
+          </g>
+        </svg>
+      </div>
+    </nav>
+
+    <!-- hero section -->
+    <div
+      class="hero flex flex-col px-8 lg:flex-row justify-between lg:px-24 mt-20 gap-16 h-full mb-40"
+    >
+      <div class="left lg:w-[60%]">
+        <div>
+          <h1 class="text-4xl font-semibold text-blue-700 mb-10">
+            Refreshment delivered right to your doorstep
+          </h1>
+          <p class="mb-10 lg:w-[90%]">
+            We are your source for the purest and most
+            <span class="text-orange-400 font-semibold"
+              >tailored water options</span
+            >
+            ensuring you have access to the best hydration solutions at your
+            fingertips . Choose us for a reliable and fully
+            <span class="text-orange-400 font-semibold"
+              >customisable experience</span
+            >
+            that keeps you refreshed and revitalized . Every sip is guaranteed
+            pure.
+          </p>
         </div>
-        <div class="nav-links hidden lg:block">
-            <ul class="flex w-96 justify-between items-center">
-                <li class="hover:underline"><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Blog</a></li>
-                <li class="bg-orange-500 text-white py-1 px-4 rounded-md font-semibold"><a href="#">Contact Us</a></li>
-            </ul>
+        <div>
+          <button
+            class="bg-blue-700 py-2 px-4 rounded-md text-white mr-8 font-semibold"
+            type="button"
+          >
+            Download Aquana app
+          </button>
+          <button
+            class="border-2 border-orange-400 py-1.5 px-4 rounded-md text-blue-700 font-semibold"
+            type="button"
+          >
+            Learn more
+          </button>
         </div>
-        <div class="hamburger-menu lg:hidden">
-            <?xml version="1.0" ?><svg height="18px"  version="1.1" viewBox="0 0 25 25" width="18px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill="none" fill-rule="evenodd" id="TabBar-Icons" stroke="none" stroke-width="1"><g fill="#000000" id="Hamburger-Round"><path d="M0,4 C0,2.8954305 0.889763236,2 2.00359486,2 L22.9964051,2 C24.10296,2 25,2.88772964 25,4 C25,5.1045695 24.1102368,6 22.9964051,6 L2.00359486,6 C0.897039974,6 0,5.11227036 0,4 L0,4 Z M0,12 C0,10.8954305 0.889763236,10 2.00359486,10 L22.9964051,10 C24.10296,10 25,10.8877296 25,12 C25,13.1045695 24.1102368,14 22.9964051,14 L2.00359486,14 C0.897039974,14 0,13.1122704 0,12 L0,12 Z M0,20 C0,18.8954305 0.889763236,18 2.00359486,18 L22.9964051,18 C24.10296,18 25,18.8877296 25,20 C25,21.1045695 24.1102368,22 22.9964051,22 L2.00359486,22 C0.897039974,22 0,21.1122704 0,20 L0,20 Z" id="Hamburger"/></g></g></svg>
-        </div>
-        </nav>
-
-        <!-- hero section -->
-        <div class="hero flex flex-col px-8 lg:flex-row justify-between lg:px-24 mt-20 gap-16 h-full mb-40">
-            <div class="left  lg:w-[60%] ">
-                <div>
-                    <h1 class="text-4xl font-semibold text-blue-700 mb-10">Refreshment delivered right to your doorstep</h1>
-                    <p class="mb-10 lg:w-[90%]">We are your source for the purest and most <span class="text-orange-400 font-semibold">tailored water options</span> ensuring you have access to the best hydration solutions at your fingertips . Choose us for a reliable and fully <span class="text-orange-400 font-semibold">customisable experience</span> that keeps you refreshed and revitalized . Every sip is guaranteed pure.</p>
-                </div>
-                <div>
-                <button class=" bg-blue-700 py-2 px-4 rounded-md text-white mr-8 font-semibold" type="button">Download Aquana app</button>
-                <button class="border-2 border-orange-400 py-1.5 px-4 rounded-md text-blue-700 font-semibold" type="button">Learn more</button>
-                </div>
-
-            </div>
-            <div class="right flex gap-1">
-                <div class=" object-cover">
-                <img class="w-64 h-full object-cover rounded-md" src="logo/african-man-drinking-water_94347.png" alt="african-man-drinking-aquana">
-                </div>
-
-                <div class="flex flex-col gap-1">
-                   <img class="w-64 rounded-md" src="logo/medium-shot-boy-drinking-water_2.png" alt="medium-shot-boy-drinking-aquana">
-                   <img class="w-64 rounded-md" src="logo/young-woman-showing-bottle-water.png" alt="young-woman-drinking-aquana">
-                </div>
-                
-            </div>
+      </div>
+      <div class="right flex gap-1">
+        <div class="object-cover">
+          <img
+            class="w-64 h-full object-cover rounded-md"
+            src="logo/african-man-drinking-water_94347.png"
+            alt="african-man-drinking-aquana"
+          />
         </div>
 
-
-        <div class="px-24 flex justify-between w-full mb-40">
-            <div class="left-side flex items-center gap-1">
-                <div class="flex flex-col gap-1">
-                <img class="w-64 rounded-md" src="/logo/plastic-bottle-water_93675-13240.png" alt="plastic bottled water">
-                <img class="w-64 rounded-md" src="/logo/young-cool-black-man-drinking-wa.png" alt="young black man drinking water">
-                </div>
-                <div class="object-cover">
-                <img class="w-64 h-80 object-cover rounded-md" src="/logo/businessman-drinking-from-water.png" alt="businessman drinking water">
-                </div>
-            </div>
-            <div class="right-side w-[40%] mt-10">
-                <p class="text-blue-700 font-bold">Why Choose Us</p>
-                <p class="text-xl my-4 font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, veritatis?</p>
-                <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi accusamus, at inventore sapiente earum atque sunt tempora cum nam expedita minus eligendi iusto pariatur iste dolore, fugit ab praesentium architecto esse fugiat. Culpa architecto repellat dolorem quos eligendi enim nulla.</p>
-                <button class="bg-orange-400 my-4 px-3 py-1.5 rounded-md text-white" type="button">Contact Us Today</button>
-
-            </div>
+        <div class="flex flex-col gap-1">
+          <img
+            class="w-64 rounded-md"
+            src="logo/medium-shot-boy-drinking-water_2.png"
+            alt="medium-shot-boy-drinking-aquana"
+          />
+          <img
+            class="w-64 rounded-md"
+            src="logo/young-woman-showing-bottle-water.png"
+            alt="young-woman-drinking-aquana"
+          />
         </div>
-</body>
+      </div>
+    </div>
+
+    <!-- why choose us -->
+
+    <div
+      class="px-8 flex justify-between w-full flex-col-reverse gap-10 lg:mb-40 lg:flex-row lg:px-24"
+    >
+      <div class="left-side flex items-center gap-1" data-aos="zoom-in" data-aos-duration="2000">
+        <div class="flex flex-col gap-1">
+          <img
+            class="w-64 rounded-md"
+            src="/logo/plastic-bottle-water_93675-13240.png"
+            alt="plastic bottled water"
+          />
+          <img
+            class="w-64 rounded-md"
+            src="/logo/young-cool-black-man-drinking-wa.png"
+            alt="young black man drinking water"
+          />
+        </div>
+        <div class="object-cover">
+          <img
+            class="w-64 h-80 object-cover rounded-md"
+            src="/logo/businessman-drinking-from-water.png"
+            alt="businessman drinking water"
+          />
+        </div>
+      </div>
+
+      <div class="right-side lg:w-[40%] mt-10">
+        <p class="text-blue-700 font-bold">Why Choose Us</p>
+        <p class="text-xl my-4 font-semibold">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
+          veritatis?
+        </p>
+        <p class="text-sm">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi
+          accusamus, at inventore sapiente earum atque sunt tempora cum nam
+          expedita minus eligendi iusto pariatur iste dolore, fugit ab
+          praesentium architecto esse fugiat. Culpa architecto repellat dolorem
+          quos eligendi enim nulla.
+        </p>
+        <button
+          class="bg-orange-400 my-4 px-3 py-1.5 rounded-md text-white"
+          type="button"
+        >
+          Contact Us Today
+        </button>
+      </div>
+    </div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
