animation on scroll adjustments

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div
       class="px-8 flex justify-between w-full flex-col-reverse gap-10 lg:mb-40 lg:flex-row lg:px-24"
     >
-      <div class="left-side flex items-center gap-1" data-aos="zoom-in" data-aos-duration="2000">
+      <div class="left-side flex items-center gap-1" data-aos="fade-right" data-aos-duration="1000">
         <div class="flex flex-col gap-1">
           <img
             class="w-64 rounded-md"
@@ -149,7 +149,7 @@
         </div>
       </div>
 
-      <div class="right-side lg:w-[40%] mt-10">
+      <div class="right-side lg:w-[40%] mt-10" data-aos="fade-left" data-aos-duration="1000">
         <p class="text-blue-700 font-bold">Why Choose Us</p>
         <p class="text-xl my-4 font-semibold">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
@@ -163,7 +163,7 @@
           quos eligendi enim nulla.
         </p>
         <button
-          class="bg-orange-400 my-4 px-3 py-1.5 rounded-md text-white"
+          class="bg-orange-400 my-4 px-4 py-1.5 mt-6 rounded-md text-white font-semibold"
           type="button"
         >
           Contact Us Today
