Changes made to the testimonial section

--- a/index.html
+++ b/index.html
@@ -262,27 +262,31 @@
           </div>
         </div>
         <!-- 2nd card -->
-        <div class="border w-[550px]">
-          <p class="text-orange-400">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-          <p>" Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community"</p>
-          <div>
-            <img class="w-20" src="logo/_MG_0043.JPG" alt="">
-          </div>
-          <div>
-            <p>Wesley Agan</p>
-            <p>CEO @ Chicken Inn</p>
+        <div class=" w-[450px] shadow-xl bg-card p-3">
+          <p class="text-yellow-400">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+          <p class="my-3 mb-6 text-sm">" Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community"</p>
+          <div class="flex gap-2 items-center">
+            <div>
+              <img class="w-12 h-12 object-cover rounded-full" src="logo/_MG_0043.JPG" alt="">
+            </div>
+            <div>
+              <p class="text-xs font-bold">Wesley Agan</p>
+              <p class="text-xs text-neutral-500">CEO @ Chicken Inn</p>
+            </div>
           </div>
         </div>
         <!-- 3rd card -->
-        <div class="border w-[550px]">
-          <p class="text-orange-400">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-          <p>" Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community"</p>
-          <div>
-            <img class="w-14" src="logo/WhatsApp Image 2024-02-22 at 6.07.48 PM.jpeg" alt="">
-          </div>
-          <div>
-            <p>Dennis Kinyua</p>
-            <p>Founder @ Casavera Lounge</p>
+        <div class=" w-[450px] shadow-xl bg-card p-3">
+          <p class="text-yellow-400">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+          <p class=" my-3 mb-6 text-sm">" Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community"</p>
+          <div class="flex gap-2 items-center">
+            <div>
+             <img class="w-12 h-12 object-cover rounded-full" src="logo/WhatsApp Image 2024-02-22 at 6.07.48 PM.jpeg" alt="">
+            </div>
+            <div>
+              <p class="text-xs font-bold">Dennis Kinyua</p>
+              <p class="text-xs text-neutral-500">Founder @ Casavera Lounge</p>
+            </div>
           </div>
         </div>
       </div>
