--- a/index.html
+++ b/index.html
@@ -292,6 +292,46 @@
       </div>
       <div class="arrows"></div>
     </div>
+    <!-- Form part-->
+    <div class=" px-24 mb-40 mt-20 h-full flex w-full justify-evenly gap-10">
+      <!-- left part of form -->
+      <div class="words w-[40%] mt-32 mb-8">
+        <p class="text-blue-700 font-semibold text-3xl mb-3 ">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam amet at, dolorem id sed est vero a sequi blanditiis aperiam. Facilis recusandae vero sit totam!</p>
+      </div>
+      <div class="form ">
+        <form action="" method="post" class=" border px-8 shadow-xl bg-card rounded-md mt-6 w-96">
+          <fieldset class="flex flex-col">
+            <label class="mt-3 mb-2" for="full-name">Enter your full name: <br>
+              <input class="border mt-1 px-14 py-1" type="text" name="full-name" id="name" placeholder="Full name">
+            </label>
+            <label class="mb-2" for="email">Enter your email address: <br>
+              <input class="border  mt-1 px-14 py-1" type="email" name="email" id="email" placeholder="Email Address">
+            </label>
+            <label class="mb-2" for="number">Enter your phone number: <br>
+              <input class="border  mt-1 px-14 py-1" type="number" name="telephone" id="phone" placeholder="Phone Number">
+            </label>
+            <label class="mb-2" for="message">Leave a message: <br>
+              <input class="border px-14 py-4" type="text" name="message" id="message" placeholder="Message">
+            </label>
+            <label for="terms-and-conditions">
+              <input class="inline" id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a class="text-blue-700 " href="#">terms and conditions</a>
+            </label>
+           <button class="border mt-3 mb-3 w-24 px-4 py-1 rounded-md bg-orange-400 text-white font-bold " type="button">SUBMIT</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <!-- Footer -->
+    <div class="footer px-24  flex justify-between mb-3">
+      <div class="copyright flex gap-3 ">
+        <p class="text-sm font-semibold">&copy; 2024 Aquana</p>
+        <p class="text-sm font-semibold">All rights reserved</p>
+      </div>
+      <div class="creation">
+        <p class="text-sm font-semibold">A Kimathi Creation</p>
+      </div>
+    </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
