--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
         <p class="text-sm font-semibold text-blue-700">A Kimathi Creation</p>
       </div>
     </div>
-
+    
+  <!-- scripts -->
     <script src="app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
