--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aquana is ...." />
     <meta name="keywords" content="customisable water experience , water" />
+    <!-- <meta http-equiv="refresh" content="0; url=https://silbacollections.netlify.app"> -->
     <title>Aquana</title>
+    <link rel="icon" type="Image" href="logo/pngegg-logo.png">
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -260,7 +262,7 @@
           <fieldset class="flex flex-col gap-1">
             <p class="text-center my-2 font-semibold text-blue-700 underline">GET IN TOUCH</p>
             <label class="mt-3 mb-2" for="full-name">Enter your full name: <br>
-              <input class="border mt-1 w-full px-2 py-2 outline-orange-400 rounded-md" type="text" name="full-name" id="name" placeholder="Full name" required autofocus>
+              <input class="border mt-1 w-full px-2 py-2 outline-orange-400 rounded-md" type="text" name="full-name" id="name" placeholder="Full name" required >
             </label>
             <label class="mb-2" for="email">Enter your email address: <br>
               <input class="border  mt-1 w-full px-2 py-2 outline-orange-400 rounded-md" type="email" name="email" id="email" placeholder="Email Address">
