remaking the web pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aquana is ...." />
     <meta name="keywords" content="customisable water experience , water" />
-    <!-- <meta http-equiv="refresh" content="0; url=https://silbacollections.netlify.app"> -->
     <title>Aquana</title>
     <link rel="icon" type="Image" href="logo/pngegg-logo.png">
     <link rel="stylesheet" href="style.css" />
@@ -142,7 +141,7 @@
         <img  src="logo/online-delivery-service-conceptp.png" alt="Online water delivery" class="h-[200px] w-full rounded-md">
         <h3 class="text-orange-400 font-semibold text-xl mb-2">Fast Delivery</h3>
         <p class="text-sm ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, nulla.</p>
-        <p class="text-sm text-neutral-400 mt-3 ">LEARN MORE</p>
+        <p class="text-sm text-neutral-400 mt-3 ">Learn more</p>
         </div>
 
       <!-- second card -->
@@ -150,7 +149,7 @@
           <img src="logo/water-bottle-water-drink-liquid.png" alt="bottled water" class="h-[200px] object-contain w-full border-2 rounded-md border-orange-400 ">
           <h3 class="text-orange-400 font-semibold text-xl mb-2">Custom Products</h3>
           <p class="text-sm">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, hic!</p>
-          <p class="text-sm text-gray-500 mt-3">LEARN MORE</p>
+          <p class="text-sm text-gray-500 mt-3">Learn more</p>
         </div>
 
         
@@ -159,7 +158,7 @@
           <img src="logo/close-up-view-hands-protective-g.png" alt="purified water" class="h-[200px] object-cover rounded-md w-full">
           <h3 class="text-orange-400 font-semibold text-xl mb-2">Water Purification</h3>
           <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, suscipit?</p>
-          <p class="text-sm text-gray-500 mt-3">LEARN MORE</p>
+          <p class="text-sm text-gray-500 mt-3">Learn more</p>
         </div>
       </div>
     </div>
@@ -221,7 +220,7 @@
         <!-- 2nd card -->
         <div class=" w-[450px] shadow-xl bg-white rounded-lg p-3" data-aos="zoom-in" data-aos-duration="1000">
           <p class="text-yellow-400">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
-          <p class="my-3 mb-6 text-sm">" Having Aquana's purified water delivered right to our doorstep is a lifesaver. It's refreshing, affordable, and saves us valuable time. "</p>
+          <p class="my-3 mb-6 text-sm">" Having Aquana's purified water delivered right to our doorstep is a lifesaver. It's refreshing, affordable, and saves us valuable time. Maji si maji, maji ni Aquana"</p>
           <div class="flex gap-2 items-center">
             <div>
               <img class="w-12 h-12 object-cover rounded-full" src="logo/_MG_0043.JPG" alt="">
