--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Aquana</title>
     <link rel="stylesheet" href="style.css" />
      <link rel="icon" type="Image" href="logo/pngegg-logo.png">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://kit.fontawesome.com/ce6898a04b.js" crossorigin="anonymous"></script>
 </head>
